<resources>
    <string name="app_name">E-Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions_txt">I agree to the <u> terms and conditions </u></string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text">Login</string>
    <string name="don_t_have_an_account_txt">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_optional_hint">Phone (Optional)</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_text">Create Account</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_message">Enter the email address associated with your account below</string>
    <string name="reset_link_text">Didn\'t receive a reset link?</string>
    <string name="resend_link_text">Resend</string>
    <string name="profile_title_text">Profile</string>
    <string name="profile_name">John Doe</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="shipping_address_text">Shipping Address</string>
    <string name="wishlist_text">Wishlist</string>
    <string name="order_history_text">Order history</string>
    <string name="payments_text">Payments</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="female_text">Female</string>
    <string name="male_text">Male</string>
    <string name="phone_hint">Phone</string>
    <string name="region_hint">Region</string>
    <string name="town_hint">Town</string>
    <string name="address_hint">Address</string>
    <string name="additional_information_hint">Additional Information</string>
    <string name="add_shipping_address_text">Add Shipping Address</string>
    <string name="change_profile_image_text">Change profile Image</string>
    <string name="choose_from_gallery_text">Choose from Gallery</string>
    <string name="choose_from_camera_text">Choose from camera</string>
    <string name="remove_profile_photo_text">Remove Profile Photo</string>
    <string name="permissions_denied">The application requires this permission enabled to continue</string>
    <string name="permissions_denied_title">!Warning</string>
    <string name="fill_profile_details">Please fill in all profile details</string>
    <string name="select_profile_image">Please select an image for your profile</string>
    <string name="smartphones_category">Smartphones</string>
    <string name="tv_s_category">TV\'s</string>
    <string name="laptops_category">Laptops</string>
    <string name="shoes_category">Shoes</string>
    <string name="clothes_category">Clothes</string>
    <string name="watches_category">Watches</string>
    <string name="beauty_category">Beauty</string>
    <string name="kitchen_category">Kitchen</string>
    <string name="bedroom_category">Bedroom</string>
    <string name="product_name_hint">Product name</string>
    <string name="product_description_hint">Product description</string>
    <string name="rich_product_description_hint">Rich product description</string>
    <string name="category_hint">Category</string>
    <string name="quantity_hint">Quantity</string>
    <string name="price_price">Price</string>
    <string name="categories_title">Select Category</string>
    <string name="smartphones_hint">Smartphones</string>
    <string name="select_category_text">Select Category</string>
    <string name="add_product_image">Please add product image</string>
    <string name="product_details_description">Product x has several features including some of the features you don\'t see in other products that you might normally see getting displayed. anyway make a purchase and we hope to see you next time, ciao.</string>
    <string name="product_details_rich_description">Product x has several features including some of the features you don\'t see in other products that you might normally see getting displayed. anyway make a purchase and we hope to see you next time x has several features including some of the features you don\'t see in other products that you might normally see getting displayed. anyway make a purchase and we hope to see you next time, ciao.</string>
    <string name="description_hint">Description</string>
    <string name="chat_with_seller_hint"><u>Chat with Seller</u></string>
    <string name="also_from_this_seller_hint">Also from this Seller</string>
    <string name="view_all_hint">View All</string>
    <string name="similar_products_hint">Similar Products</string>
    <string name="seller_hint">Seller</string>
    <string name="name_hint">Name</string>
    <string name="add_to_cart_hint">Add To Cart</string>
    <string name="order_now_hint">Order Now</string>
    <string name="visit_store_hint">Visit Store</string>
    <string name="discount_price_hint"> <strike> Ksh 42000 </strike> </string>
    <string name="last_seen_hint">Last seen 2hrs ago</string>
    <string name="product_added_to_cart">Added successfully</string>
    <string name="goto_cart_hint">Go To Cart</string>
    <string name="no_items_text">No Items</string>
    <string name="checkout_hint">Checkout</string>
    <string name="cart_hint">Cart</string>

    <string-array name="categories">
        <item>Smartphones</item>
        <item>Laptop</item>
        <item>TV\'s</item>
        <item>Shoes</item>
        <item>Clothes</item>
        <item>Watches</item>
        <item>Beauty</item>
        <item>Kitchen</item>
        <item>Bedroom</item>
        <item>Bedroom</item>
    </string-array>

</resources>