<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput_login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideline"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideline"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideline"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/txtInput_login_email">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/forgot_password"
            android:textColor="@color/forgotPasswordColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideline"
            app:layout_constraintTop_toBottomOf="@id/txtInput_login_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/access_background_btn"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideline"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/login_forgot_password" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideline"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/login_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_txt"
                android:textColor="@color/darker"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/login_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/register_text"
                android:textStyle="bold"
                android:textColor="@color/loginRegisterBtnColor"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginLeftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginRightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".94" />

    </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>