<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/address_bottom_sheet_layout"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.home.profile.UpdateAddressFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/shipping_address_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/shipping_address_text"
        android:textColor="@color/darker"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/shipping_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/shipping_address_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_shipping_user_firstName"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/shipping_user_firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_shipping_user_lastName"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/shipping_user_lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_shipping_user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/shipping_names">

        <EditText
            android:id="@+id/shipping_user_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_hint"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/region_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_shipping_user_phone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_shipping_user_region"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/shipping_user_region"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/region_hint"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_shipping_user_town"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/shipping_user_town"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/town_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_shipping_user_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/region_names">

        <EditText
            android:id="@+id/shipping_user_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_hint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_shipping_user_address_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_shipping_user_address">

        <EditText
            android:id="@+id/shipping_user_address_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/additional_information_hint"
            android:gravity="top"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/submit_shipping_address_button"
        layout="@layout/login_register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_shipping_user_address_info"
        />

</androidx.constraintlayout.widget.ConstraintLayout>