<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_layout">

    <View
        android:id="@+id/view_layout_0"
        android:layout_width="70dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/view_layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_from_gallery_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="12dp"
        android:text="@string/choose_from_gallery_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_layout_0" />

    <View
        android:id="@+id/view_layout_1"
        android:layout_width="0dp"
        android:layout_height="0.6dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_from_gallery_text" />

    <TextView
        android:id="@+id/choose_from_camera_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="12dp"
        android:text="@string/choose_from_camera_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_layout_1" />

    <View
        android:id="@+id/view_layout_2"
        android:layout_width="0dp"
        android:layout_height="0.6dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_from_camera_text" />

    <TextView
        android:id="@+id/remove_profile_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="12dp"
        android:text="@string/remove_profile_photo_text"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_layout_2" />

</androidx.constraintlayout.widget.ConstraintLayout>