<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.profile.ChangeImageFragment">

    <View
        android:layout_width="70dp"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view_layout_0"
        android:background="@drawable/view_layout_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/choose_from_gallery_text"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/view_layout_0"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:id="@+id/choose_from_gallery_text"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0.6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view_layout_1"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/choose_from_gallery_text"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/choose_from_camera_text"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/view_layout_1"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:id="@+id/choose_from_camera_text"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0.6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view_layout_2"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/choose_from_camera_text"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remove_profile_photo_text"
        android:textColor="@android:color/holo_red_light"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/view_layout_2"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/remove_profile_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>